--- a/index.html
+++ b/index.html
@@ -11,22 +11,34 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <link rel="stylesheet" href="/style.css" />
 
-    <title>Frontend Mentor | [Challenge Name Here]</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
+    <title>Frontend Mentor | git-salmanshaikh</title>
   </head>
   <body>
-    Samuel Green sam Available to Walk That sounds great. I’d be happy with
+
+    <div class="div-purple"> 
+
+
+    </div>
+
+    <section class="container-mobile">
+      <div class="notch">
+
+      </div>
+
+      <div class="top-background-container">
+        <!-- 
+<img class="img-arrow" src="
+        #" alt="arrow">
+        <img src="#" alt="profile photo">
+        <p>Samuel Green</p>
+        -->
+        
+      </div>
+    </section>
+    <!--
+     sam  That sounds great. I’d be happy with
     that. Could you send over some pictures of your dog, please? Here are a few
     pictures. She’s a happy girl! Can you make it? She looks so happy! The time
     we discussed works. How long shall I take her out for? 30 minute walk $29 1
@@ -35,11 +47,14 @@
     arrangements and make bookings. Once the walk has been completed you can
     rate your walker and book again all through the chat.
 
+     -->
+    <!--
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="#">git-SalmanShaikh</a>.
     </div>
+    -->
   </body>
 </html>
