--- a/index.html
+++ b/index.html
@@ -16,29 +16,31 @@
     <title>Frontend Mentor | git-salmanshaikh</title>
   </head>
   <body>
-
-    <div class="div-purple"> 
-
-
-    </div>
+    <div class="div-purple"></div>
 
     <section class="container-mobile">
-      <div class="notch">
-
-      </div>
+      <div class="notch"></div>
 
       <div class="top-background-container">
-        <!-- 
-<img class="img-arrow" src="
-        #" alt="arrow">
-        <img src="#" alt="profile photo">
-        <p>Samuel Green</p>
-        -->
-        
+        <div class="div-icon-profilepic">
+          <img
+            class="img-arrow"
+            src="/images/"
+            alt="arrow"
+          />
+          <img src="#" alt="profile photo" />
+        </div>
+        <div class="div-profileName-status">
+          <p class="p-profileName">Samuel Green</p>
+          <p class="p-profileStatus">Available to Walk</p>
+        </div>
+        <div>
+          <img src="#" alt="icon menu" />
+        </div>
       </div>
     </section>
     <!--
-     sam  That sounds great. I’d be happy with
+    That sounds great. I’d be happy with
     that. Could you send over some pictures of your dog, please? Here are a few
     pictures. She’s a happy girl! Can you make it? She looks so happy! The time
     we discussed works. How long shall I take her out for? 30 minute walk $29 1
