added chat section in the mobile layout

--- a/index.html
+++ b/index.html
@@ -23,25 +23,30 @@
 
       <div class="top-background-container">
         <div class="div-icon-profilepic">
+          <img class="img-arrow" src="images/arrow.png" alt="arrow" />
           <img
-            class="img-arrow"
-            src="/images/"
-            alt="arrow"
+            class="img-profile"
+            src="images/avatar.jpg"
+            alt="profile photo"
           />
-          <img src="#" alt="profile photo" />
         </div>
         <div class="div-profileName-status">
           <p class="p-profileName">Samuel Green</p>
           <p class="p-profileStatus">Available to Walk</p>
         </div>
         <div>
-          <img src="#" alt="icon menu" />
+          <img class="img-dotsMenu" src="images/dots.png" alt="icon menu" />
         </div>
       </div>
+
+      <section class="section-chat-container">
+        <div class="div-chat-one">
+          <p class="p-chat-left">That sounds great. I’d be happy with that.</p>
+        </div>
+      </section>
     </section>
     <!--
-    That sounds great. I’d be happy with
-    that. Could you send over some pictures of your dog, please? Here are a few
+     Could you send over some pictures of your dog, please? Here are a few
     pictures. She’s a happy girl! Can you make it? She looks so happy! The time
     we discussed works. How long shall I take her out for? 30 minute walk $29 1
     hour walk $49 Type a message… Simple booking Stay in touch with our dog
